k8s/infrastructure/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quizzmaster-ingress
  namespace: masterquizz-prod
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: quizzmaster.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-office
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-quizzmaster-ingress
  namespace: masterquizz-prod
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: masterquizz-prod-api-gateway-cors@kubernetescrd
spec:
  rules:
  - host: api.quizzmaster.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitor-quizzmaster-ingress
  namespace: masterquizz-prod
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: masterquizz-prod-monitoring-auth@kubernetescrd
spec:
  rules:
  - host: monitor.quizzmaster.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-service
            port:
              number: 3000
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: prometheus-service
            port:
              number: 9090
      - path: /jaeger
        pathType: Prefix
        backend:
          service:
            name: jaeger-service
            port:
              number: 16686
      - path: /dashboards
        pathType: Prefix
        backend:
          service:
            name: opensearch-dashboards-service
            port:
              number: 5601
